--- a/templates/student/SearchStudentByClub.html.twig
+++ b/templates/student/SearchStudentByClub.html.twig
@@ -23,7 +23,7 @@
        <h1>Detail of {{ club.ref }}</h1>
        <ul>
             <li>Date of creation:  {{ club.creationDate|date }} </li>
-           <li>Price:  {{ club.price }}</li>
+           <li>fees:  {{ club.fees }}</li>
            <li>Enabled: {{ club.enabled }}</li>
        </ul>
    {% endfor %}
